--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <meta name = "My Portfolio" content = " about my resuming journey">
+    <meta name = "author" content = "Sachini Vinodya">
+    <title>My Web Resume</title>
 </head>
 <body>
-<h1> Hello HTML! </h1>
-<h2> Hello CSS! </h2>
-<h3> Hello JS! </h3>
-</h4> Sachini Vinodya </h4>
+
 
 </body>
 </html>
