--- a/index.html
+++ b/index.html
@@ -1,13 +1,304 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name = "My Portfolio" content = " about my resuming journey">
-    <meta name = "author" content = "Sachini Vinodya">
-    <title>My Web Resume</title>
-</head>
+
+    <head>
+        <link rel="shortcut icon" href="assessts/logos/Artboard_1-100-removebg-preview.png" type="image/x-icon">
+        <link rel="stylesheet" href="./assessts/style/style.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <title>Home | Sachini Vinodya</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+                href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+                rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+        <link
+                href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+                rel="stylesheet">
+        <link rel="stylesheet" href="./assets/style/headingSection.css">
+        <link rel="stylesheet" href="./assets/style/aboutMeSection.css">
+        <link rel="stylesheet" href="./assets/style/educationSection.css">
+        <link rel="stylesheet" href="./assets/style/skillsAndFrameworks.css">
+    </head>
+
 <body>
+
+<html lang="en" dir="ltr">
+
+<body>
+<nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+    </label>
+    <label class="logo">TECHIE TULIPS</label>
+    <ul id="menuItem">
+        <li><a class="active" href="#">HOME</a></li>
+        <li><a href="#">ABOUT ME</a></li>
+        <li><a href="#">EDUCATION</a></li>
+        <li><a href="#">PROJECTS</a></li>
+        <li><a href="#">CONTACT</a></li>
+    </ul>
+    <button>
+        START A PROJECT
+    </button>
+</nav>
+
+
+<main id="particles-js">
+
+    <section id="headingSectionMainParent">
+        <div class="headerHeadingContainer">
+            <span id="headingOne">HELLO I'M</span><br>
+            <span id="headingTwo">A WEB</span>
+            <span id="headingThree">DESIGNER</span> <br>
+            <span id="headingFour">AND</span>
+            <span id="headingFive">DEVELOPER</span>
+        </div>
+        <div id="quickDescriptionAboutMe">
+            <p>I’m a Software Engineer Undergraduate Living in Sri Lanka. Welcome To My Digital Resume.</p>
+        </div>
+        <div class="socialLinksParent">
+            <a href=""><img src="./assets/images/icons8-github-64.png" alt=""></a>
+            <a href=""><img src="./assets/images/icons8-linkedin-circled-50.png" alt=""></a>
+            <a href=""><img src="./assets/images/icons8-facebook-64.png" alt=""></a>
+        </div>
+        <div class="profileImageSlider">
+            <img src="./assets/images/myImageRounded.png" alt="">
+        </div>
+    </section>
+
+    <section class="aboutMeSectionMainParent">
+        <div id="miniDetailsHolder" style="z-index: 10;" >
+            <div class="miniDetails" id="miniDetailsOne">
+                <span class="miniDetailsHeadingOne">5+</span>
+                <span class="miniDetailsHeadingTwo">PROJECTS</span>
+            </div>
+
+            <div class="miniDetails" id="miniDetailsTwo">
+                <span class="miniDetailsHeadingOne">2+</span>
+                <span class="miniDetailsHeadingTwo">EXPERIENCE</span>
+            </div>
+
+            <div class="miniDetails" id="miniDetailsThree">
+                <span class="miniDetailsHeadingOne">3+</span>
+                <span class="miniDetailsHeadingTwo">CUSTOMERS</span>
+            </div>
+        </div>
+
+        <div id="myImageBlackAndWhite">
+
+            <img src="./assets/images/blackNWhiteMyImage.png" alt="">
+        </div>
+
+        <div id="aboutMeDescription">
+            <p>
+                I’m Full Stack developer and still undergraduate. 20 years old independent boy with lot of
+                future plans.
+
+                I’m looking for challenging problems to solve. My background is in enterprise software
+                development, however, I have an
+                insatiable curiosity for AI – particularly deep learning – applications and their potential to
+                change the technology
+                landscape.
+
+            </p>
+
+            <button id="viewMoreButton">VIEW MORE</button>
+            <a id="downloadCvButton" href ="https://drive.google.com/file/d/1K_ddp_Ud0gUaofKtZWsHm-1TQbQrnaJa/view?usp=sharing" attributes-list download  >DOWNLOAD CV</a>
+
+        </div>
+
+    </section>
+
+</main>
+
+<section id="educationSectionMainParent" class="reveal">
+    <span id="educationMainHeading">EDUCATION & SKILLS</span>
+
+    <img src="./assets/images/educationTree.png" alt="">
+
+</section>
+
+<section id="whatCanIdoSectionMainParent">
+    <div>
+        <span>WHAT CAN I DO?</span>
+        <p>
+            Web Development <br>
+            Mobile App Dev. <br>
+            Standalone SW <br>
+            UI/UX <br>
+            Photoshop <br>
+            Illustrator <br>
+            Many More :)
+        </p>
+    </div>
+    <div id="desktopImageContainer">
+        <img src="./assets/images/Descktop.png" alt="">
+    </div>
+</section>
+
+<section id="skillsSectionMainParent" class="reveal">
+
+    <div id="cardContainer">
+
+    </div>
+</section>
+
+<section id="projectsSectionMainParent">
+    <span id="mainHeading">PROJECTS DONE BY ME</span>
+    <span id="subHeading">Hover over project icon to see details</span>
+    <div id="categoryParent">
+        <a id="typeAll" class="active" onclick="typeAllClicked()">All</a>
+        <a id="typeMobileApps" onclick="typeMobileAppsClicked()">Mobile Apps</a>
+        <a id="typeWeb" onclick="typeWebClicked()">Web</a>
+        <a id="typeStandalone" onclick="typeStandaloneClicked()">Standalone</a>
+    </div>
+    <div id="projectItemsContainer" class="reveal">
+
+    </div>
+
+    <div id="projectItemControllers">
+
+        <img src="./assets/images/next.png" onclick="leftScrollButtonClicked()" class="slideButtons" id="previousButton" alt="">
+        <div id="slideCount"></div>
+        <img src="./assets/images/next.png" onclick="rightScrollButtonClicked()" class="slideButtons" id="nextButton" alt="">
+
+    </div>
+    <div id="startAProjectSection" class="reveal">
+        <span>Start A Project</span>
+        <span>Interested in working together? We should queue up a chat. I’ll buy the coffee.</span>
+        <a href="">Let's Go</a>
+    </div>
+</section>
+
+<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/ravindu-samarawickrama"
+     style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
+
+<section id="contactMeSection">
+
+    <img src="./assets/images/programmer-image.png" alt="Programmer Image">
+
+
+    <div id="socialLinksContainer">
+        <span>Contact Me</span>
+        <div id="social-icons">
+            <div class="social-icons-background"><a href="https://github.com/NaashNix" target="_blank"><img
+                    src="./assets/images/github.png" alt="" width="50px"></a> </div>
+            <div class="social-icons-background"><a href="https://www.linkedin.com/in/ravinduts/"><img
+                    src="./assets/images/linkedin.png" alt="" width="50px"></a></div>
+            <div class="social-icons-background"><a href="https://wa.me/message/VYIMCELYQL42M1"><img
+                    src="./assets/images/whatsapp.jpg" alt="" width="50px"></a></div>
+            <div class="social-icons-background"><a href="https://www.instagram.com/naashnix"><img
+                    src="./assets/images/instagram.png" alt="" width="50px"></a></div>
+            <div class="social-icons-background"><a href="tel:+(94)702053777"><img
+                    src="./assets/images/call.png" alt="" width="50px"></a>
+            </div>
+            <div class="social-icons-background"><a href="https://www.facebook.com/naashnix/"><img
+                    src="./assets/images/facebook.svg" alt="" width="50px"></a></div>
+        </div>
+    </div>
+</section>
+
+<footer style="display: flex; flex-direction: row; justify-content: space-between;">
+    <div id="siteLinks">
+        <span>SITE LINKS</span>
+        <ul>
+            <a href="">
+                <li>Home</li>
+            </a>
+            <a href="">
+                <li>Education</li>
+            </a>
+            <a href="">
+                <li>Skills</li>
+            </a>
+            <a href="">
+                <li>Projects</li>
+            </a>
+            <a href="">
+                <li>Contact Me</li>
+            </a>
+        </ul>
+    </div>
+    <address>
+        <span>PHYSICAL ADDRESS</span>
+        <p>Ravindu Thilakshana Samarawickrama <br> NO : 48/A/2 <br> Kekiriwaththa <br> Galthude <br> Panadura
+            <br> 12500 Sri Lanka </p>
+    </address>
+    <div id="contactDetails">
+        <span id="heading">CONNECTIONS</span>
+        <div style="margin-top: 0.6rem;">
+            <span>Tel : +(94) 70 20 53 777</span>
+            <span>Tel : +(94) 763 763 662</span>
+            <span>thilakshanaravindu@gmail.com</span>
+        </div>
+    </div>
+    <div id="developerDetails">
+        <span>Developed By,</span>
+        <a  style="text-decoration: none;" href="">
+            <span id="myName">Ravindu Samarawickrama</span>
+        </a>
+        <a id="backToTopButton" href="">BACK TO TOP</a>
+    </div>
+
+</footer>
+
+<!-- particles.js container -->
+<!-- <div id="particles-js"></div> -->
+<!-- scripts -->
+<script src="assets/js/particles.js"></script>
+<script src="assets/js/app.js"></script>
+
+<!-- stats.js -->
+<!-- <script src="./assets/js/stats.js"></script> -->
+
+<script>
+    var count_particles, stats, update;
+    stats = new Stats;
+    stats.setMode(0);
+    stats.domElement.style.position = 'absolute';
+    stats.domElement.style.left = '0px';
+    stats.domElement.style.top = '0px';
+    document.body.appendChild(stats.domElement);
+    count_particles = document.querySelector('.js-count-particles');
+    update = function () {
+        stats.begin();
+        stats.end();
+        if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) {
+            // count_particles.innerText = window.pJSDom[0].pJS.particles.array.length;
+        }
+        requestAnimationFrame(update);
+    };
+    requestAnimationFrame(update);
+</script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="./assets/js/projectSection.js"></script>
+<script src="./assets/js/skillSection.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script src="./assets/js/script.js"></script>
 
 
 </body>
+
 </html>
