--- a/index.html
+++ b/index.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="shortcut icon" href="./assets/images/BlogLogo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./assets/style/style.css">
-    <title> Home | Sachini Vinodya </title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#018711" />
+    <title>Digital Resume | Sachini Vinodya </title>
+
+    <!-- Initialized Boostrap CSS Framework-->
+    <link rel="stylesheet" href="assets/boostrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Initialized  CSS -->
+    <link rel="stylesheet" href="assets/style/style.css">
+
+    <!-- Initialized  fontawasome4cdn -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 
 </head>
-
 <body>
- <html lang="en" dir="ltr">
-    <body>
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
-        </label>
-        <label class="logo">TECHIE TULIPS</label>
-        <ul id="menuItem">
-            <li><a class="active" href="#">HOME</a></li>
-            <li><a href="#">ABOUT ME</a></li>
-            <li><a href="#">EDU & WORK</a></li>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">CONTACT</a></li>
-        </ul>
-        <button>
-            START A PROJECT
-        </button>
+
+<section id="nav-bar">
+    <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="assets/images/Artboard_1-100-removebg-preview.png"></a> <!-- add logo -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto"> <!-- nav bar align right -->
+                    <li class="nav-item">
+                        <a class="nav-link "  href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Edu & Work </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link ">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    </body>
+</section>
+</body>
+</html>
