--- a/index.html
+++ b/index.html
@@ -49,5 +49,21 @@
         </div>
     </nav>
 </section>
+<!-- main components of home page -->
+<section id="main">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p class="intro">  Hello !... I 'm</p>
+                <p class="name"> Sachini Vinodya</p>
+                <p class="intro1"><i>Web Designer & Developer | Blogger | Software Engineer student...</i></p>
+            </div>
+            <div class="col-md-6 text-center">
+                <img src="assets/images/mainImage.png" class="img-fluid">
+            </div>
+        </div>
+    </div>
+
+</section>
 </body>
 </html>
