--- a/index.html
+++ b/index.html
@@ -17,13 +17,30 @@
     <!-- Initialized  fontawasome4cdn -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Serif:ital@0;1&family=Rubik&display=swap"
+          rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Serif:ital@0;1&family=Rubik&display=swap"
+          rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&family=Noto+Serif:ital@0;1&family=Rubik&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 
 <section id="nav-bar">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="assets/images/Artboard_1-100-removebg-preview.png"></a> <!-- add logo -->
+            <a class="navbar-brand" href="https://tehietulips.blogspot.com/" target="_blank">
+                <!-- add logo -->
+                <img src="assets/images/Artboard_1-100-removebg-preview.png">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,18 +68,42 @@
 </section>
 <!-- main components of home page -->
 <section id="main">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col">
                 <p class="intro">  Hello !... I 'm</p>
-                <p class="name"> Sachini Vinodya</p>
+                <p class="name"> <span class="colored-letter">S</span>ACHINI  <span class="colored-letter">V</span>INODYA</p>
                 <p class="intro1"><i>Web Designer & Developer | Blogger | Software Engineer student...</i></p>
+
+                <!-- attached github page -->
+                <a href="https://github.com/sachinivindoya" target="_blank">
+                <img src="assets/images/logos/github.png" class="logos" alt="github icon">
+                </a>
+
+                <!-- attaced linked in page -->
+                <a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank">
+                <img src="assets/images/logos/linkedin.png" class="logos" alt="linkedin icon">
+                </a>
+
+                <!-- attaced facebook page -->
+                <a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank">
+                    <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="logos" alt="facebook icon">
+                </a>
+
             </div>
-            <div class="col-md-6 text-center">
-                <img src="assets/images/mainImage.png" class="img-fluid">
+            <div class="col text-end">
+                <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" class="img-fluid">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+
             </div>
         </div>
     </div>
+
+
 
 </section>
 </body>
