--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="https://tehietulips.blogspot.com/" target="_blank">
                 <!-- add logo -->
-                <img src="assets/images/Artboard_1-100-removebg-preview.png">
+                <img src="assets/images/Artboard_1-100-removebg-preview.png" class="animated_image">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,20 +75,20 @@
                 <p class="name"> <span class="colored-letter">S</span>ACHINI  <span class="colored-letter">V</span>INODYA</p>
                 <p class="intro1"><i>Web Designer & Developer | Blogger | Software Engineer student...</i></p>
 
-                <!-- attached github page -->
-                <a href="https://github.com/sachinivindoya" target="_blank">
-                <img src="assets/images/logos/github.png" class="logos" alt="github icon">
-                </a>
+                     <!-- attached github page -->
+                      <a href="https://github.com/sachinivindoya" target="_blank">
+                         <img src="assets/images/logos/github.png" class="logos" alt="github icon">
+                     </a>
 
-                <!-- attaced linked in page -->
-                <a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank">
-                <img src="assets/images/logos/linkedin.png" class="logos" alt="linkedin icon">
-                </a>
+                     <!-- attaced linked in page -->
+                     <a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank">
+                         <img src="assets/images/logos/linkedin.png" class="logos" alt="linkedin icon">
+                     </a>
 
-                <!-- attaced facebook page -->
-                <a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank">
-                    <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="logos" alt="facebook icon">
-                </a>
+                     <!-- attaced facebook page -->
+                     <a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank">
+                         <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="logos" alt="facebook icon">
+                     </a>
 
             </div>
             <div class="col text-end">
