--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
     <meta name="theme-color" content="#018711" />
     <title>Digital Resume | Sachini Vinodya </title>
 
-    <!-- Initialized Boostrap CSS Framework-->
-    <link rel="stylesheet" href="assets/boostrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
     <!-- Initialized  CSS -->
     <link rel="stylesheet" href="assets/style/style.css">
-
-    <!-- Initialized  fontawasome4cdn -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,39 +25,20 @@
           rel="stylesheet">
 </head>
 <body>
-
-<section id="nav-bar">
-    <nav class="navbar navbar-expand-lg ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="https://tehietulips.blogspot.com/" target="_blank">
-                <!-- add logo -->
-                <img src="assets/images/Artboard_1-100-removebg-preview.png" class="animated_image">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto"> <!-- nav bar align right -->
-                    <li class="nav-item">
-                        <a class="nav-link "  href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Edu & Work </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link ">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link ">Contact</a>
-                    </li>
+<header>
+    <div>
+        <section id="header-bar">
+            <nav>
+                <ul>
+                    <li><a href="" class="menu-item active">HOME</a></li>
+                    <li><a href="">ABOUT ME</a></li>
+                    <li><a href="">EDUCATION</a></li>
+                    <li><a href="">PROJECTS</a></li>
+                    <li><a href="">CONTACT</a></li>
                 </ul>
-            </div>
-        </div>
-    </nav>
-</section>
+            </nav>
+        </section>
+
 <!-- main components of home page -->
 <section id="main">
     <div class="container text-center">
@@ -102,7 +75,11 @@
             </div>
         </div>
     </div>
-
+</section>
+    </div>
+</header>
+</header>
+</body>
 
 
 </section>
