--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Monomaniac+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
 
+
+    <!-- fontawasom -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+
     <!-- css style -->
     <link rel="stylesheet" href="assets/style/style.css">
 </head>
 <body>
+<!-- navbar -->
+<nav>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+       <!-- <i class="fas fa-bars"></i> -->
+        <img src="assets/images/bars.png" class="bar">
+    </label>
+    <a class="logo" href="https://tehietulips.blogspot.com/" target="_blank">
+        <img src="assets/images/logos/myLogo-removebg-preview.png" width="150">
+    </a>
+    <ul id="menuItem">
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT ME</a></li>
+        <li><a href="#">EDU & WORK</a></li>
+        <li><a href="#">PROJECTS</a></li>
+        <li><a href="#">CONTACT</a></li>
+    </ul>
+</nav>
 </body>
 </html>
