--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
 
     <!-- css style -->
     <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="assets/style/normalize.css">
+
+    <link rel="stylesheet" href="assets/style/homepage.css">    <!-- 1stHome page CSS-->
 </head>
 <body>
 <!-- navbar -->
+<header>
 <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -41,5 +45,30 @@
         <li><a href="#">CONTACT</a></li>
     </ul>
 </nav>
+</header>
+    <!-- HOME PAGE COMPONENTS -->
+<main class="home">
+    <section>
+        <div class="left">
+            <div class="intro">
+                <p> Hello ! I am,</p>
+            </div>
+            <div class="name">
+                <p> <span class="coloredLetter">S</span>ACHINI <span class="coloredLetter">V</span>INODYA</p>
+            </div>
+            <div class="intro1">
+                <P>Web Designer & Developer | Blogger | Software Engineer student...</P>
+            </div>
+        </div>
+      <article>
+          <div class="mainImage">
+           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="500">
+          </div>
+        </article>
+    </section>
+
+</main>
+
+
 </body>
 </html>
