--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section>
         <div class="left">
             <div class="intro">
-                <p> Hello ! I am,</p>
+                <p class="letter-animation"> <span>Hello ! I am,</span></p>
             </div>
             <div class="name">
                 <p> <span class="coloredLetter">S</span>ACHINI <span class="coloredLetter">V</span>INODYA</p>
@@ -59,10 +59,25 @@
             <div class="intro1">
                 <P>Web Designer & Developer | Blogger | Software Engineer student...</P>
             </div>
+            <div class="logos">
+                <!-- github -->
+                <a href="https://github.com/sachinivindoya" target="_blank">
+                    <img src="assets/images/logos/github.png" alt="github logo" class="socials" >
+                </a>
+                <!-- linkedin -->
+                <a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank">
+                    <img src="assets/images/logos/linkedin.png" alt="github logo" class="socials" >
+                </a>
+                <!-- facebook -->
+                <a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank">
+                    <img src="assets/images/logos/Facebook_icon_(black).svg.png" alt="github logo" class="socials" >
+                </a>
+
+            </div>
         </div>
       <article>
           <div class="mainImage">
-           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="500">
+           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="420">
           </div>
         </article>
     </section>
