--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       <article>
           <div class="mainImage">
-           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="420">
+           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="420" class="img">
           </div>
         </article>
     </section>
