--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/style/normalize.css">
 
     <link rel="stylesheet" href="assets/style/homepage.css">    <!-- 1stHome page CSS-->
+    <link rel="stylesheet" href="assets/style/aboutme.css">     <!-- 2nd page css -->
 </head>
 <body>
 <!-- navbar -->
@@ -75,13 +76,15 @@
 
             </div>
         </div>
-      <article>
           <div class="mainImage">
-           <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png" width="420" class="img">
+              <img src="assets/images/_20230605_090746-removebg-preview (1) (1).png"  class="img">
           </div>
-        </article>
     </section>
 
+    <!-- about me page -->
+    <section id="second">
+
+    </section>
 </main>
 
 
