--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 
     <!-- fontawasom -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+          integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- css style -->
     <link rel="stylesheet" href="assets/style/style.css">
@@ -47,7 +49,23 @@
     </ul>
 </nav>
 </header>
+<main>
 
-
+    <section id="home-page">
+            <div class="header-text">
+                <p class="intro"> Hello ! I am</p>
+                <p class="name">Sachini Vinodya </p>
+                <p class="intro1">Web Designer & Developer <span class="colored-letter">  | </span>
+                    Blogger<span class="colored-letter">  |  </span>
+                    Software Engineering student</p>
+                <div class="socials">
+                   <img src="assets/images/logos/github.png" class="icons">
+                    <img src="assets/images/logos/linkedin.png" class="icons">
+                    <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="icons">
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
