--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="assets/images/logos/myLogo-removebg-preview.png" width="150">
     </a>
     <ul id="menuItem">
-        <li><a href="#">HOME</a></li>
+        <li><a href="#" class="active">HOME</a></li>
         <li><a href="#">ABOUT ME</a></li>
         <li><a href="#">EDU & WORK</a></li>
         <li><a href="#">PROJECTS</a></li>
@@ -59,9 +59,19 @@
                     Blogger<span class="colored-letter">  |  </span>
                     Software Engineering student</p>
                 <div class="socials">
+                    <!-- github -->
+                    <a href="https://github.com/sachinivindoya?tab=overview&from=2023-06-01&to=2023-06-08" alt="github" target="_blank">
                    <img src="assets/images/logos/github.png" class="icons">
-                    <img src="assets/images/logos/linkedin.png" class="icons">
-                    <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="icons">
+                    </a>
+                    <!-- linkedin -->
+                    <a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" alt="linkedin" target="_blank">
+                        <img src="assets/images/logos/linkedin.png" class="icons">
+                    </a>
+                   <!-- facebook -->
+                    <a href="https://web.facebook.com/profile.php?id=100089564455632" alt="facebook" target="_blank">
+                        <img src="assets/images/logos/Facebook_icon_(black).svg.png" class="icons">
+                    </a>
+
                 </div>
             </div>
         </div>
