--- a/index.html
+++ b/index.html
@@ -76,6 +76,31 @@
             </div>
         </div>
     </section>
+
+    <!-- about page -->
+    <section id="about">
+        <div class="about-left-col">
+            <img src="assets/images/my.jpg">
+        </div>
+        <div class="about-right-col">
+            <div class="glass-effect">
+                <p class="title">About Me...</p>
+                <br>
+                <p class="description">
+
+                    I am a software Engineer student at my age of 21st from Kalutara. <br>
+                    I choose to become a Software Engineer because of my endless curiosity about technologies I saw when I was a kid.<br>
+                    Now I am driven by  curiosity & proficient about JAVA , MYSQL , ANDROID & etc.<br>
+                    I am a good team player & I have no problem with meeting challenges.<br>
+                    I believe my ability to communicate clearly & my software engineering skills & other talents will make me an idol.<br>
+                    I always believe & follow “ WITHOUT SACRIFICE , THERE’S NO WIN !”
+
+                </p>
+
+            </div>
+        </div>
+    </section>
+
 </main>
 </body>
 </html>
