--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <link rel="stylesheet" href="assets/style/homepage.css">    <!-- 1stHome page CSS-->
     <link rel="stylesheet" href="assets/style/aboutme.css">     <!-- 2nd page css -->
+    <link rel="stylesheet" href="assets/style/edu.css">         <!-- 3rd page css -->
 </head>
 <body>
 <!-- navbar -->
@@ -103,6 +104,51 @@
             </div>
         </div>
     </section>
+
+    <!-- education -->
+    <section id="container">
+        <div class="container left-container">
+            <div class="text-box">
+                <p> WP/KL/Walatara Vidyalaya </p>
+                <p>Primary Education </p>
+                <small>(2007-2011)</small>
+            </div>
+        </div>
+        <div class="container right-container">
+            <div class="text-box">
+                <p> WP/KL Deshasthra Balika Vidyalaya , WP/KL D.S. Senanayake Central College.</p>
+                <p>Secondary Education </p>
+                <small>(2012-2017) </small>
+            </div>
+        </div>
+        <div class="container left-container">
+            <div class="text-box">
+                <p> Passed the o/l - (2017)</p>
+                <small>A6 C3</small>
+            </div>
+        </div>
+        <div class="container right-container">
+            <div class="text-box">
+                <p>WP/KL/ Gurulugomie Vidyalaya </p>
+                <p>Secondary Education </p>
+                <small>(2018-2020) </small>
+            </div>
+        </div>
+        <div class="container left-container">
+            <div class="text-box">
+                <p>Passed the  A/L</p>
+                <p>  Commerce Stream (2020)</p>
+                  <small> A1 B2</small>
+            </div>
+        </div>
+        <div class="container right-container">
+            <div class="text-box">
+                <p>Institute of software Engineering (IJSE)</p>
+                <p> present </p>
+            </div>
+        </div>
+    </section>
+
 
 </main>
 </body>
