--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="assets/style/homepage.css">    <!-- 1stHome page CSS-->
     <link rel="stylesheet" href="assets/style/aboutme.css">     <!-- 2nd page css -->
     <link rel="stylesheet" href="assets/style/edu.css">         <!-- 3rd page css -->
+    <link rel="stylesheet" href="assets/style/work.css">
+    <link rel="stylesheet" href="assets/style/skills.css">
 </head>
 <body>
 <!-- navbar -->
@@ -148,8 +150,24 @@
             </div>
         </div>
     </section>
+    <!-- work  -->
+<section id="work">
+<div>
+    <h1> work experience</h1>
+</div>
+</section>
 
+    <!-- skills -->
+    <section id="skills">
+        <div>
+            <h1>skills</h1>
+        </div>
+    </section>
 
+    <!-- projects  -->
+    <section id="projects">
+
+    </section>
 </main>
 </body>
 </html>
