update project page

--- a/index.html
+++ b/index.html
@@ -168,31 +168,85 @@
 
     <!-- projects  -->
     <section id="projectsSectionMainParent">
-            <span id="mainHeading">PROJECTS DONE BY ME</span>
-            <span id="subHeading">Hover over project icon to see details</span>
-            <div id="categoryParent">
-                <a id="typeAll" class="active" onclick="typeAllClicked()">All</a>
-                <a id="typeMobileApps" onclick="typeMobileAppsClicked()">Mobile Apps</a>
-                <a id="typeWeb" onclick="typeWebClicked()">Web</a>
-                <a id="typeStandalone" onclick="typeStandaloneClicked()">Standalone</a>
+        <span id="mainHeading">
+            PROJECTS DONE BY ME
+        </span>
+        <span id="subHeading">
+            Hover over project icon to see details
+        </span>
+        <div id="categoryParent">
+            <a id="typeAll" class onclick="typeAllClicked()">All</a>
+            <a id="typeMobileApps" class onclick="typeMobileAppsClicked()">Mobile Apps</a>
+            <a id="typeWeb" class onclick="typeWebClicked()">Web</a>
+            <a id="typeStandalone" class onclick="typeStandaloneClicked()">Standalone</a>
+        </div>
+        <div id="projectItemsContainer" class="reveal active">
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/chat (2).JPG">
+                </div>
+                <div class="desc">
+                    <span> Group Chatting App</span>
+                    <hr>
+                    <p> "This project is done for my second semester Introduction to Networking final project.
+                        I used Java socket programming to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/groupChat"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
             </div>
-            <div id="projectItemsContainer" class="reveal">
-
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/gym1.JPG">
+                </div>
+                <div class="desc">
+                    <span> Gym Management System</span>
+                    <hr>
+                    <p> "This project is done for my second semester AAD1 project.
+                        I used Java, JavaFx, Layered Architecture to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/GYM_management_system"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
             </div>
-
-            <div id="projectItemControllers">
-
-                <img src="./assets/images/next.png" onclick="leftScrollButtonClicked()" class="slideButtons" id="previousButton" alt="">
-                <div id="slideCount"></div>
-                <img src="./assets/images/next.png" onclick="rightScrollButtonClicked()" class="slideButtons" id="nextButton" alt="">
-
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/hostel1.JPG">
+                </div>
+                <div class="desc">
+                    <span> Hostel Management System</span>
+                    <hr>
+                    <p> "This project is https://github.com/sachinivindoya/GYM_management_systemdone for my second semester ORM project.
+                        I used Java, JavaFx, Layered Architecture, Hibernate to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/Hostel_system"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
             </div>
-            <div id="startAProjectSection" class="reveal">
-                <span>Start A Project</span>
-                <span>Interested in working together? We should queue up a chat. I’ll buy the coffee.</span>
-                <a href="">Let's Go</a>
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/pos2.JPG">
+                </div>
+                <div class="desc">
+                    <span> Shop POS System</span>
+                    <hr>
+                    <p> "This project is done for my second semester IT project.
+                        I used HTML, CSS,  Boostrap, JavaScript to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/TechieMarket_POS"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
             </div>
-        </section>
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/portfolio1.JPG">
+                </div>
+                <div class="desc">
+                    <span> Digital Resume</span>
+                    <hr>
+                    <p> "This project is done for my second semester IT project.
+                        I used HTML, CSS, JavaScript  to develop this Resume"</p>
+                    <a href="https://github.com/sachinivindoya/MyProfile"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- contact -->
