--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         </span>
         <div id="categoryParent">
             <a id="typeAll" class onclick="typeAllClicked()">All</a>
-            <a id="typeMobileApps" class onclick="typeMobileAppsClicked()">Mobile Apps</a>
             <a id="typeWeb" class onclick="typeWebClicked()">Web</a>
             <a id="typeStandalone" class onclick="typeStandaloneClicked()">Standalone</a>
+            <a id="typeAssignments" class onclick="typeAssignmentsClicked()">Assignments </a>
         </div>
         <div id="projectItemsContainer" class="reveal active">
             <div class="projectItem">
@@ -243,6 +243,73 @@
                     <p> "This project is done for my second semester IT project.
                         I used HTML, CSS, JavaScript  to develop this Resume"</p>
                     <a href="https://github.com/sachinivindoya/MyProfile"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
+            </div>
+            <!-- asignments -->
+            <!-- assignment 1 -->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/assignmentImages/assignment1.JPG">
+                </div>
+                <div class="desc">
+                    <span> The Beginning</span>
+                    <hr>
+                    <p> "This includes my very first beginning to web development. In this I've learned how to gather requirements,
+                        wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
+                    <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link"></a>
+                    <img src="assets/images/logos/google-drive-icon.png">
+                </div>
+            </div>
+            <!-- assignment (class) -->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/assignmentImages/inClassAssignment.JPG">
+                </div>
+                <div class="desc">
+                    <span> The Beginning</span>
+                    <hr>
+                    <p> "This assignment includes more practice about wireframe I got."</p>
+                    <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view"></a>
+                    <img src="assets/images/logos/google-drive-icon.png">
+                </div>
+            </div>
+            <!-- assignment 2-->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/assignmentImages/assignment2.JPG">
+                </div>
+                <div class="desc">
+                    <span> HTML</span>
+                    <hr>
+                    <p> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML"</p>
+                    <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view"></a>
+                    <img src="assets/images/logos/google-drive-icon.png">
+                </div>
+            </div>
+            <!-- assignment 3-->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/assignmentImages/assignment3.JPG">
+                </div>
+                <div class="desc">
+                    <span>CSS</span>
+                    <hr>
+                    <p> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
+                    <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03"></a>
+                    <img src="assets/images/logos/github.png">
+                </div>
+            </div>
+            <!-- assignment 4-->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/images/assignmentImages/assignment4.JPG">
+                </div>
+                <div class="desc">
+                    <span>CSS</span>
+                    <hr>
+                    <p> " In this we learned how to do animations with using CSS keyframes. "</p>
+                    <a href="https://github.com/sachinivindoya/Assignment04"></a>
                     <img src="assets/images/logos/github.png">
                 </div>
             </div>
