--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
                     <hr>
                     <p> "This project is done for my second semester Introduction to Networking final project.
                         I used Java socket programming to develop this application"</p>
-                    <a href="https://github.com/sachinivindoya/groupChat"></a>
+                    <a href="https://github.com/sachinivindoya/groupChat">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <div class="projectItem">
@@ -203,8 +204,9 @@
                     <hr>
                     <p> "This project is done for my second semester AAD1 project.
                         I used Java, JavaFx, Layered Architecture to develop this application"</p>
-                    <a href="https://github.com/sachinivindoya/GYM_management_system"></a>
+                    <a href="https://github.com/sachinivindoya/GYM_management_system">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <div class="projectItem">
@@ -216,8 +218,9 @@
                     <hr>
                     <p> "This project is https://github.com/sachinivindoya/GYM_management_systemdone for my second semester ORM project.
                         I used Java, JavaFx, Layered Architecture, Hibernate to develop this application"</p>
-                    <a href="https://github.com/sachinivindoya/Hostel_system"></a>
+                    <a href="https://github.com/sachinivindoya/Hostel_system">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <div class="projectItem">
@@ -229,8 +232,9 @@
                     <hr>
                     <p> "This project is done for my second semester IT project.
                         I used HTML, CSS,  Boostrap, JavaScript to develop this application"</p>
-                    <a href="https://github.com/sachinivindoya/TechieMarket_POS"></a>
+                    <a href="https://github.com/sachinivindoya/TechieMarket_POS">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <div class="projectItem">
@@ -242,8 +246,9 @@
                     <hr>
                     <p> "This project is done for my second semester IT project.
                         I used HTML, CSS, JavaScript  to develop this Resume"</p>
-                    <a href="https://github.com/sachinivindoya/MyProfile"></a>
+                    <a href="https://github.com/sachinivindoya/MyProfile">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <!-- asignments -->
@@ -257,8 +262,9 @@
                     <hr>
                     <p> "This includes my very first beginning to web development. In this I've learned how to gather requirements,
                         wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
-                    <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link"></a>
+                    <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link">
                     <img src="assets/images/logos/google-drive-icon.png">
+                    </a>
                 </div>
             </div>
             <!-- assignment (class) -->
@@ -270,8 +276,9 @@
                     <span> The Beginning</span>
                     <hr>
                     <p> "This assignment includes more practice about wireframe I got."</p>
-                    <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view"></a>
+                    <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view">
                     <img src="assets/images/logos/google-drive-icon.png">
+                    </a>
                 </div>
             </div>
             <!-- assignment 2-->
@@ -283,8 +290,9 @@
                     <span> HTML</span>
                     <hr>
                     <p> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML"</p>
-                    <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view"></a>
+                    <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view">
                     <img src="assets/images/logos/google-drive-icon.png">
+                    </a>
                 </div>
             </div>
             <!-- assignment 3-->
@@ -296,8 +304,9 @@
                     <span>CSS</span>
                     <hr>
                     <p> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
-                    <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03"></a>
+                    <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
             <!-- assignment 4-->
@@ -309,8 +318,9 @@
                     <span>CSS</span>
                     <hr>
                     <p> " In this we learned how to do animations with using CSS keyframes. "</p>
-                    <a href="https://github.com/sachinivindoya/Assignment04"></a>
+                    <a href="https://github.com/sachinivindoya/Assignment04">
                     <img src="assets/images/logos/github.png">
+                    </a>
                 </div>
             </div>
         </div>
@@ -323,5 +333,6 @@
         </div>
     </section>
 </main>
+<script src="assets/js/project.js"></script>
 </body>
 </html>
