--- a/index.html
+++ b/index.html
@@ -16,3 +16,12 @@
     <meta name="viewport" content="width=device-width initial-scale=1 maximum scale=2">
     <meta name="theme-color" content="GREEN">
 </head>
+<body>
+<section>
+    <aside>
+        <div class="HomeShape1"></div>
+        <span id="blog"><a href="https://tehietulips.blogspot.com/" target="_blank">Techie Tu</a><span id="blog2">lip</span></span>
+    </aside>
+</section>
+</body>
+</html>
