--- a/index.html
+++ b/index.html
@@ -19,9 +19,19 @@
 <body>
 <section>
     <aside>
-        <div class="HomeShape1"></div>
         <span id="blog"><a href="https://tehietulips.blogspot.com/" target="_blank">Techie Tu</a><span id="blog2">lip</span></span>
     </aside>
+    <!-- nav bar -->
+    <nav class="menu">
+        <ul>
+            <li><a class="active-hover-line" href="#home" id="active">Home</a></li>
+            <li><a class="hover-line" href="#about">About</a></li>
+            <li><a class="hover-line" href="#Edu">Edu & Work</a></li>
+            <li><a class="hover-line" href="#skills">Skills</a></li>
+            <li><a class="hover-line" href="#projects">Projects</a></li>
+            <li><a class="hover-line" href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 </section>
 </body>
 </html>
